apps/your-spotify/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: strip-backend-prefix
  namespace: your-spotify
spec:
  stripPrefix:
    prefixes:
      - /backend
