apps/your-spotify/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: your-spotify
  labels:
    app: your-spotify
