apps/your-spotify/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: cloudflare-issuer
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.middlewares: infrastructure-redirect-https@kubernetescrd
  name: your-spotify-ingress
  namespace: your-spotify
spec:
  rules:
    - host: ENC[AES256_GCM,data:P9pGxRrbUkWwoLyFbe9EuYRTlNnYTf2vO4QgXHeuvik=,iv:tEcc0z3eWng04K1P/jfKdRM3Ylb9jEAshXArlqQV5DQ=,tag:Tek8ptL2mHv9aszDOKcJiA==,type:str]
      http:
        paths:
          - pathType: Prefix
            path: /backend
            backend:
              service:
                name: your-spotify-backend-svc-cip
                port:
                  number: 8080
          - pathType: Prefix
            path: /
            backend:
              service:
                name: your-spotify-frontend-svc-cip
                port:
                  number: 3000
  tls:
    - hosts:
        - ENC[AES256_GCM,data:xDvrMWnN5YtSwuaTwiwRVJMms0Twn0tJlASdwwCQJI8=,iv:TrQ3KLLR3GzGb8FbBKb9myHXKC2E5ip9Z2w5SmCNcWM=,tag:c1Z1p5tO7gibPXnwp/tgvw==,type:str]
      secretName: your-spotify-cert
sops:
  lastmodified: "2026-04-23T19:05:04Z"
  mac: ENC[AES256_GCM,data:8UwsauxC+ERNaApFck7pETW4KNQrpv3VK87Ejl3YzHp6yvGf2V7354dhasbGBWs0s1ffBuo6fXcwMRCiGFdcJophCy9yvMwPCDGk3Q/sel7x3fLQMO6+QFgoqHXDTHUkMv2DqolphFkO0+DTW7loXphZRz3gMVCa4qxATDUJqSg=,iv:d3tTk449cF8NS6sUMYXc8bA6r5YY5Pb6nv675nFONTg=,tag:CRouah/WTBKR4XJ5gGKZyw==,type:str]
  pgp:
    - created_at: "2026-04-23T19:05:04Z"
      enc: |-
        -----BEGIN PGP MESSAGE-----

        hQIMA1R72LzcpgpmAQ/9E39hU44ZxVHPiRpjA+YnzKNvoSKv73PoqQXVwoC+FWqa
[...]
        =f8G/
        -----END PGP MESSAGE-----
      fp: 08083A92DBB719D2E10998259B44720A645D6802
  encrypted_regex: ^(data|stringData|email|apiToken|host|hosts)$
  version: 3.12.2
